chores: update bento grid

--- a/content/docs/configuration/blog.mdx
+++ b/content/docs/configuration/blog.mdx
@@ -62,7 +62,7 @@ export const BLOG_CATEGORIES: {
   {
     title: "News",
     slug: "news",
-    description: "Updates and announcements from Next FraudShield.",
+    description: "Updates and announcements from Next Metrixx.",
   },
   {
     title: "Education",
